[gd_scene load_steps=8 format=3 uid="uid://ddjuicrhttdju"]

[ext_resource type="PackedScene" uid="uid://dxji0vv7aupek" path="res://scene/player.tscn" id="1_p3eey"]
[ext_resource type="Script" path="res://scripts/word_level1.gd" id="1_q6qv7"]
[ext_resource type="PackedScene" uid="uid://p18w1ayrhgax" path="res://scene/enemy.tscn" id="2_q7dbq"]
[ext_resource type="FontFile" uid="uid://csx7dlrsvo7md" path="res://assets/font/04B_03__.TTF" id="4_v1kne"]
[ext_resource type="PackedScene" uid="uid://g5pd0xfbsx3t" path="res://scene/game_over_panel.tscn" id="5_phc8c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmtqv"]
size = Vector2(1152, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_534lp"]
size = Vector2(1152, 32)

[node name="word" type="Node2D"]
script = ExtResource("1_q6qv7")
enemy_scene = ExtResource("2_q7dbq")
spawn_offset = 65.0

[node name="player" parent="." instance=ExtResource("1_p3eey")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(576, -16)
shape = SubResource("RectangleShape2D_kmtqv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(576, 666)
shape = SubResource("RectangleShape2D_534lp")

[node name="enemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="coninSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="labelCoin" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_v1kne")
theme_override_font_sizes/font_size = 35
text = "Coin: 0"
horizontal_alignment = 1

[node name="gameOverPanel" parent="." instance=ExtResource("5_phc8c")]
z_index = 1
offset_left = 448.0
offset_top = 192.0
offset_right = 723.0
offset_bottom = 446.0

[connection signal="timeout" from="enemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="coninSpawnTimer" to="." method="_on_conin_spawn_timer_timeout"]
